--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,164 @@
-.App {
+.cards {
+  width: 100%;
+  height: auto;
+  
+}
+.card {
+  margin: 6%;
+  transition: all cubic-bezier(0.175, 0.885, 0, 1);
+  background-color: #fff;
+  width: 21.25%;
+  border-radius: 12px;
+  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1 );
+  float: right;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card:hover {
+  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05, 1.05);
+  transition: 0.5s ease-out;
+}  
+.card__img {
+  width: 100%;
+  height: 235px;
+  border-top-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card__info {
+  background-color: #fff;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  padding: 16px 24px 24px 24px;
+  background-color: #fff;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ 
+.card__category {
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  color: #868686;
+  background-color: #fff;
+} 
+
+.card__title {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-family: sans-serif;
+  background-color: #fff;
+  text-transform: capitalize;
+}
+button {
+  padding: 5px 8px;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  color: #868686;
+  background-color: #fff;
+  outline: none;
+  border: 1px solid black ;
+  cursor: pointer;
+}  
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+.main-contianers {
+  background-color: #c1c1c1;
+  width: 100%;
+ 
+}
+.container-contain {
+  width: 450px;
+  /* background-color: #fff; */
+  margin: auto;
+  padding: 12px 30px;
+  /* border: 1px solid; */
+  /* box-shadow: 0 2px 8px rgb(0 0 0 / 16%); */
+  /* border-radius: 15px; */
+  transition: .4s;
+  margin-top: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+
+text-align: center;
+margin-bottom: 0px 20px ;
+}
+.form{
+ padding: 30px 40px;
+}
+
+.form-control{
+ margin-bottom: 10px;
+ padding-bottom: 20px;
+ position: relative;
+}
+
+.form-control input{
+border: 2px solid lightgray;
+border-radius: 4px;
+display: block;
+width: 100%;
+padding: 14px;
+font-size: 14px;
+
+}
+
+.form-control input:focus{
+ outline: 0;
+ border-color: gray; 
+}
+
+.form-control.success input{
+ border-color: var(--success-color);
+}
+
+.form-control.error input {
+ border-color: var(--error-color);
+}
+
+.form-control small {
+  color: var(--error-color);
+ font-weight: bold;
+ position: absolute;
+ bottom: 0px;
+ left: 0px;
+ visibility: hidden; 
+}
+.form-control.error small {
+ visibility:  visible;
+}
+
+.form button {
+ cursor: pointer;
+ background-color: #3725f8;
+ border: 2px solid #3725f8;
+ border-radius: 4px;
+ color: white;
+ display: block;
+ width: 100%;
+ padding: 10px;
+ font-size: 16px;
+ margin-top: 20px;
+ 
+
+}
+.Login1 {
+  border: 1px solid black;
+  background-color:#02f5e1;
+  padding: 13px 26px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 8px;
 }
